Fix code inspections